homelab/immich/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: immich-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:release@sha256:d317916b28090c33eb36b308464ea391f8b7df1d850fcfea227a39ec879718c2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 2283
            - name: metrics
              containerPort: 8081
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
            - name: config
              mountPath: /usr/src/app/config.yaml
              subPath: config.yaml
          resources:
            requests:
              cpu: 1000m
              memory: 512Mi
            limits:
              cpu: 4000m
              memory: 4Gi
          startupProbe:
            exec:
              command:
                - immich-healthcheck
            initialDelaySeconds: 90
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 10
          livenessProbe:
            exec:
              command:
                - immich-healthcheck
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command:
                - immich-healthcheck
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-library-local
        - name: config
          configMap:
            name: immich-config
