homelab/immich/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  selector:
    app: immich-server
  ports:
    - name: http
      port: 80
      targetPort: 2283
    - name: metrics
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: 3003
